--- a/reactstrap/package.json
+++ b/reactstrap/package.json
@@ -6,10 +6,11 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-scripts": "2.1.8",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
-    "video-react": "^0.13.6",
-    "reactstrap":"^8.0.0"
+    "video-react": "^0.13.6"
   },
   "scripts": {
     "start": "react-scripts start",
