--- a/reactstrap/package.json
+++ b/reactstrap/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "2.1.8",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "video-react": "^0.13.6"
   },
   "scripts": {
